<resources>
    <string name="app_name">firstApp</string>
    <string name="connect">🔑 התחברות</string>
    <string name="personal_area">👤 אזור אישי</string>
    <string name="cart">🛒 עגלה</string>
    <string name="categories">📋 קטגוריות</string>
    <string name="sales_button">💥 מבצעים</string>
    <string name="search_for_player">🔍 חיפוש שחקנים</string>
    <string name="search_item">חפש מוצר...</string>
    <string name="add_to_cart">➕ הוסף לעגלה</string>
    <string name="הוסף_לעגלה">➕ הוסף לעגלה</string>
    <string name="עכבר_גיימינג_אלחוטי_מקצועי">עכבר גיימינג אלחוטי מקצועי</string>
    <string name="מנהל_חנות">מנהל החנות    🎮 GameZone 🎮</string>
    <string name="מסך_ניהול_ראשי">⚙️ מסך ניהול ראשי ⚙️</string>
    <string name="בחר_פעולה_לניהול_המערכת">בחר פעולה לניהול המערכת</string>
    <string name="כפתור_ניהול_הזמנות">🛒 ניהול הזמנות</string>
    <string name="כפתור_ניהול_מלאי">💼 ניהול מלאי</string>
    <string name="כפתור_פניות_לקוחות">📨 פניות לקוחות</string>
    <string name="כפתור_דוחות_עסקיים">📊 דוחות עסקיים</string>
    <string name="כפתור_ניהול_עובדים">👥 ניהול עובדים</string>
    <string name="כפתור_מעבר_למסך_עובדים">👥מעבר למסך עובדים</string>
    <string name="כפתור_התנתקות">התנתק מהמערכת  </string>
    <string name="בחר_דוח_עסקי_מהרשימה">🎮 GameZone 🎮 בחר דוח עסקי מהרשימה</string>
    <string name="חפש_דוח">חפש דוח...</string>
    <string name="דוח_מכירות">📊 דוח מכירות</string>
    <string name="גרף_מכירות">גרף מכירות</string>
    <string name="נתוני_מכירות_יומיים">נתוני מכירות יומיים</string>
    <string name="מוצר">מוצר</string>
    <string name="כמות">כמות</string>
    <string name="יעד_מכירות">יעד מכירות</string>
    <string name="gamezone">🎮 GameZone 🎮</string>
    <string name="בחר_סוג_דוח">בחר סוג דוח</string>
    <string name="בחר_דוח">בחר דוח</string>
    <string name="הצג_דוח">הצג דוח</string>
    <string name="עגלת_קניות">🛒 עגלת קניות</string>
    <string name="כרטיס_אשראי">כרטיס אשראי</string>
    <string name="מזומן">מזומן</string>
    <string name="המשך_לתשלום">המשך לתשלום</string>
    <string name="קטגוריות_רכישה">🎮 Game Zone 🎮 קטגוריות רכישה</string>
    <string name="קטגוריית_משחקים">קטגוריית משחקים</string>
    <string name="קטגוריית_מחשבים">קטגוריית מחשבים</string>
    <string name="קטגוריית_אוזניות">קטגוריית אוזניות</string>
    <string name="קטגוריית_כיסאות_גיימינג">קטגוריית כיסאות גיימינג</string>
    <string name="חזרה_למסך_הקודם">חזרה למסך הקודם</string>
    <string name="מחשבים">💻 מחשבים | GameZone</string>
    <string name="סנן_לפי">סנן לפי:</string>
    <string name="נייח">נייח</string>
    <string name="נייד">נייד</string>
    <string name="הוסף_לסל">הוסף לסל</string>
    <string name="תשלום_בכרטיס_אשראי">תשלום בכרטיס אשראי</string>
    <string name="תעודת_זהות">תעודת זהות</string>
    <string name="מספר_כרטיס_אשראי">מספר כרטיס אשראי</string>
    <string name="mm_yy_תוקף">תוקף (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="אשר_תשלום">אשר תשלום</string>
    <string name="הצגת_פרופיל">📇 הצגת פרופיל</string>
    <string name="הצגת_הזמנות">📦 הצגת הזמנות</string>
    <string name="תמיכה_ללקוח">💬 תמיכה ללקוח</string>
    <string name="המלצות_אישיות">🎯 המלצות אישיות</string>
    <string name="חיפוש_שותפים_למשחק">🎮 חיפוש שותפים למשחק</string>
    <string name="פניות_לקוחות">פניות לקוחות 🎮GameZone🎮</string>
    <string name="כפתור_ניהול_פנייה">ניהול פנייה</string>
    <string name="שלח_פנייה_לשירות_לקוחות">שלח פנייה לשירות לקוחות</string>
    <string name="פנייה_שם_מלא">שם מלא 👤</string>
    <string name="פנייה_אימייל">אימייל 📧</string>
    <string name="כתוב_כאן_את_הפנייה_שלך">כתוב כאן את הפנייה שלך ✍️</string>
    <string name="כפתור_שלח_פנייה">שלח פנייה 📨</string>
    <string name="מסך_ניהול_ראשי_לעובד">⚙️ מסך ניהול ראשי לעובד ⚙️</string>
    <string name="בחר_פעולה_שתרצה_לבצע_במערכת">בחר פעולה שתרצה לבצע במערכת</string>
    <string name="כפתור_הצגת_לוח_זמנים_ומשימות">📅 הצגת לוח זמנים ומשימות</string>
    <string name="כפתור_הגש_משמרות_לשבוע">🕒 הגש משמרות לשבוע</string>
    <string name="מסך_שיבוץ_עובדים">שיבוץ עובדים 🎮GameZone🎮</string>
    <string name="כפתוור_שבוע_קודם">◀ שבוע קודם</string>
    <string name="כפתור_שבוע_הבא">שבוע הבא ▶</string>
    <string name="כפתור_תצוגת_סידור">תצוגת סידור</string>
    <string name="כפתור_פרסם_סידור">פרסם סידור</string>
    <string name="בקשות_עובדים_לשבוע_הקרוב">בקשות עובדים לשבוע הקרוב</string>
    <string name="שיבוץ_שם_עובד">שם העובד</string>
    <string name="שיבוץ_עובדים_למשמרות">שיבוץ עובדים למשמרות</string>
    <string name="בחר_יום_שיבוץ">בחר יום:</string>
    <string name="בחר_משמרת_שיבוץ">בחר משמרת:</string>
    <string name="עובדים_זמינים_למשמרת_נבחרת">עובדים זמינים למשמרת נבחרת:</string>
    <string name="גרור_עובד_למשבצת_המשמרת_כדי_לשבץ">* גרור עובד למשבצת המשמרת כדי לשבץ</string>
    <string name="כפתור_שמור_שיבוצים_למשמרת">שמור שיבוצים למשמרת זו</string>
    <string name="מחפשים_שותפים_למשחק">🎮GameZone🎮 מחפשים שותפים למשחק</string>
    <string name="playstation_button">PlayStation</string>
    <string name="xbox_button">Xbox</string>
    <string name="nintendo_button">Nintendo</string>
    <string name="pc_gaming_button">PC Gaming</string>
    <string name="חפש_משחק_שחקן">חפש משחק או שחקן...</string>
    <string name="כפתור_פרסם_מודעה_חדשה">פרסם מודעה חדשה</string>
    <string name="משחקים">🎮 משחקים | GameZone</string>
    <string name="חפש_משחקים">חפש משחקים...</string>
    <string name="כיסאות_גיימינג">🪑 כיסאות גיימינג | GameZone</string>
    <string name="אוזניות">🎧 אוזניות | GameZone</string>
    <string name="ניהול_מלאי">ניהול מלאי 🎮 GameZone 🎮</string>
    <string name="חפש_מוצר">חפש מוצר...</string>
    <string name="כפתור_עדכון_פריט">עדכן פריט</string>
    <string name="כפתור_עדכון_מלאי">עדכון מלאי</string>
    <string name="ברוכים_הבאים">ברוכים הבאים לאתר GameZone</string>
    <string name="כניסה_למערכת">🔑 כניסה למערכת</string>
    <string name="מייל_כניסה">כתובת אימייל</string>
    <string name="סיסמא_כניסה">סיסמה</string>
    <string name="כפתור_התחברות_כניסה">🔵 התחבר</string>
    <string name="כפתור_הרשמה_כניסה">📝 הרשמה</string>
    <string name="סידור_עבודה">🎮 GameZone 🎮 סידור עבודה</string>
    <string name="רשימת_עובדים_להיום">רשימת עובדים להיום</string>
    <string name="שם_עובד_סידור">שם העובד</string>
    <string name="תפקיד_סידור">תפקיד</string>
    <string name="שעות_משמרת_סידור">שעות משמרת</string>
    <string name="כפתור_סידור_עבודה">צור סידור עבודה</string>
    <string name="ניהול_הזמנות">ניהול הזמנות</string>
    <string name="לוח_הזמנות_למוצרים">לוח הזמנות למוצרים</string>
    <string name="כפתור_ניהול_הזמנה">ניהול הזמנה</string>
    <string name="ניהול_משימות">🎮 GameZone 🎮 ניהול משימות</string>
    <string name="כפתור_עדכן_סטטוס_הזמנה">עדכן סטטוס הזמנה</string>
    <string name="המלציות_אישיות">🎮 GameZone 🎮 🎯 המלצות אישיות</string>
    <string name="פרופיל_גיימר">פרופיל גיימר</string>
    <string name="גיל_המלצות">גיל</string>
    <string name="נסיון_משחק_המלצות">ניסיון משחק</string>
    <string name="העדפות_משחק_המלצות">העדפות משחק</string>
    <string name="סוגי_משחק_המלצות">סוגי משחקים מועדפים (ניתן לבחור מספר אפשרויות)</string>
    <string name="אקשן_המלצות">אקשן</string>
    <string name="הרפתקאות_המלצות">הרפתקאות</string>
    <string name="rpg_המלצות">RPG</string>
    <string name="אסטרטגיה_המלצות">אסטרטגיה</string>
    <string name="ספורט_המלצות">ספורט</string>
    <string name="mmo_המלצות">MMO</string>
    <string name="סימולציה_המלצות">סימולציה</string>
    <string name="מרוצים_המלצות">מרוצים</string>
    <string name="אימה_המלצות">אימה</string>
    <string name="פלטפורמות_משחק_המלצות">פלטפורמות משחק</string>
    <string name="שם_משתמש_מודעה">מה השם משתמש שלך בפלטפורמה?</string>
    <string name="משחק_מודעה">המשחק בו את/ה מחפש שותפים</string>
    <string name="מידע_נוסף_מודעה">מידע נוסף</string>
    <string name="תיאור_עצמי_מודעה">הוסף תיאור על עצמך ועל סגנון המשחק שלך</string>
    <string name="כפתור_פרסם_מודעה">פרסם מודעה</string>
    <string name="דוחות_עסקיים">דוחות עסקיים</string>
    <string name="פרטי_מוצר">פרטי המוצר</string>
    <string name="כפתור_מעבר_לעגלה_ממצור">מעבר לעגלת קניות</string>
    <string name="מבצעים_חמים">💥מבצעים חמים💥</string>
    <string name="הרשמה">הרשמה</string>
    <string name="הרשמה_למערכת">הרשמה למערכת</string>
    <string name="שם_משתמש_הרשמה">שם משתמש</string>
    <string name="אימייל_הרשמה">אימייל</string>
    <string name="סיסמה_הרשמה">סיסמה</string>
    <string name="כפתור_הרשמה">🔵 הרשמה</string>
    <string name="ניהול_פניית_לקוחות">ניהול פניית לקוח 🎮GameZone🎮</string>
    <string name="כפתור_הוסף_הערה_פניות">הוסף הערה</string>
    <string name="כפתור_סגור_פניה">סגור פניה</string>
    <string name="עדכון_פרטי_מלאי">🎮 GameZone 🎮 📦 עדכון פרטי מלאי</string>
    <string name="פרטי_מוצר_עדכון_מלאי">פרטי מוצר</string>
    <string name="מקט_מוצר">מק״ט מוצר</string>
    <string name="שם_מוצר_עדכון_מלאי">שם המוצר</string>
    <string name="עדכון_כמות_מלאי">עדכון כמות</string>
    <string name="כפתור_שמור_שינויים">שמור שינויים</string>
    <string name="עדכון_מלאי_פריט">עדכון מלאי 🎮 GameZone 🎮</string>
    <string name="כפתור_עדכון_מלאי_פריט">עדכן מלאי</string>
    <string name="איזור_אישי">איזור אישי</string>
    <string name="לוח_זמנים">🎮 GameZone 🎮 לוח זמנים</string>
    <string name="הגדרת_תפקיד">הגדרת תפקיד המשתמש</string>
    <string name="הוספת_עובד_חדש">הוספת עובד חדש למערכת</string>
    <string name="user_roles">user_roles</string>
    <string name="תפקיד">הכנס תפקיד: עובד או מנהל</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_phone">הכנס מספר טלפון ליצירת קשר</string>
</resources>