<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f0f0"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/תשלום_בכרטיס_אשראי"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="סכום לתשלום: ₪1,999"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/תעודת_זהות"
        android:inputType="number"
        android:padding="12dp" />

    <EditText
        android:id="@+id/card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/מספר_כרטיס_אשראי"
        android:inputType="number"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/card_expiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mm_yy_תוקף"
        android:inputType="text"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/card_cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cvv"
        android:inputType="numberPassword"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="12dp"/>


    <Button
        android:id="@+id/confirm_credit_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/אשר_תשלום"
        android:backgroundTint="#28a745"
        android:textColor="#ffffff"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

</LinearLayout>