<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f0f0"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamezone"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#3182CE"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/שלח_פנייה_לשירות_לקוחות"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#1E293B"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/פנייה_שם_מלא"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="12dp"/>
    <EditText
        android:id="@+id/customer_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="מספר טלפון ליצירת קשר"
        android:background="@android:drawable/editbox_background"
        android:padding="12dp"
        android:drawableStart="@android:drawable/ic_menu_call"
        android:inputType="phone"
        android:textSize="14sp"
        android:layout_marginBottom="12dp"/>


    <EditText
        android:id="@+id/customer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/פנייה_אימייל"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="12dp"
        android:layoutDirection="rtl"/>
    <EditText
        android:id="@+id/customer_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="באיזה מוצר יש בעיה ?"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="12dp"
        android:layoutDirection="rtl"/>
    <EditText
        android:id="@+id/customer_message"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/כתוב_כאן_את_הפנייה_שלך"
        android:gravity="top"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="12dp"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/send_message_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/כפתור_שלח_פנייה"
        android:backgroundTint="#3182CE"
        android:textColor="#ffffff"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

</LinearLayout>
