<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#F7FAFC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginBottom="22dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gamezone"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#3182CE"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ברוך הבא ישראל כהן!"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#2D3748"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/view_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/הצגת_פרופיל"
            android:backgroundTint="#3182CE"
            android:textColor="#ffffff"
            android:padding="14dp"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/view_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/הצגת_הזמנות"
            android:backgroundTint="#38A169"
            android:textColor="#ffffff"
            android:padding="14dp"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/customer_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/תמיכה_ללקוח"
            android:backgroundTint="#DD6B20"
            android:textColor="#ffffff"
            android:padding="14dp"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/personal_suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/המלצות_אישיות"
            android:backgroundTint="#DDCA20"
            android:textColor="#ffffff"
            android:padding="14dp"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/game_partner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/חיפוש_שותפים_למשחק"
            android:backgroundTint="#A120DD"
            android:textColor="#ffffff"
            android:padding="14dp"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>