<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f0f0"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/פרטי_מוצר"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_marginBottom="16dp"
        />


    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#007bff"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/הוסף_לעגלה"
        android:backgroundTint="#28a745"
        android:textColor="#ffffff"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/go_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/כפתור_מעבר_לעגלה_ממצור"
        android:backgroundTint="#007bff"
        android:textColor="#ffffff"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>
</LinearLayout>
